@@ -30,6 +30,7 @@ t/19param-found-outside-section.t
 t/20allowedcommentchars.t
 t/22trailing-comment-lines.t
 t/23scalar-ref.t
+t/24case-sensitive-exists.t
 t/allowed-comment-chars.ini
 t/array.ini
 t/bad.ini
@@ -37,6 +38,7 @@ t/blank.ini
 t/brackets-in-values.ini
 t/ca.ini
 t/case-sensitive-default.ini
+t/case-sensitive.ini
 t/cmt.ini
 t/en.ini
 t/es.ini
