@@ -456,6 +456,12 @@ a parameter C<$parameter> inside, not counting default values.
 
 sub exists {
 	my ($self, $sect, $parm)=@_;
+
+    if ($self->{nocase}) {
+        $sect = lc($sect);
+        $parm = lc($parm);
+    }
+    
 	return (exists $self->{v}{$sect}{$parm});
 }
 
